--- a/shop.html
+++ b/shop.html
@@ -36,6 +36,8 @@
         <!--=============== BREADCRUMB ===============-->
         <section class="breadcrumb">
             <h1>Test font</h1>
+            <p>Test p</p>
+            <a href="" class="button">Btn</a>
         </section>
 
         <!--=============== DISCOUNT ===============-->
