--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                </form>
                <form action="#" class="signup">
                   <div class="field">
-                     <input type="text" placeholder="Enter your email" required>
+                     <input type="email" placeholder="Enter your email" required>
                   </div>
                   <div class="field">
                      <input type="password" placeholder="Enter your password" required>
