--- a/Home.html
+++ b/Home.html
@@ -8,9 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--=============== BOXICONS ===============-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- favicon icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Source+Serif+Pro:ital,wght@0,200;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./assets/img/logo/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/home.css" />
     <link rel="stylesheet" href="./assets/css/home.css" />
     <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
@@ -20,7 +31,48 @@
 </head>
 
 <body>
-    <div class="menu_bar">
+    <header>
+        <div class="top-header">
+            <div class="logo">
+                <img src="https://demo74leotheme.b-cdn.net/prestashop/leo_mtdanstore_demo/img/logo-1644293331.jpg"
+                    alt="">
+            </div>
+            <ul class="topnav" id="menu">
+                <li class="item">Trang Chủ</li>
+                <li class="item">Sản phẩm</li>
+                <li class="item">Khuyến Mãi</li>
+                <li class="item">Dịch Vụ</li>
+                <li class="icon" onclick="myFunction()">
+                    <i class="fa-solid fa-bars"></i>
+                </li>
+            </ul>
+            <div class="actions">
+                <div class="cart">
+                    <ion-icon name="cart-outline"></ion-icon>
+                    <small>5</small>
+                </div>
+                <div class="contact">
+                    <ion-icon name="call-outline"></ion-icon>
+                </div>
+                <div class="more">
+                    <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+                </div>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="intro">
+                <h1>Sản phẩm mới nhất được hoàn thiện 100% từ carbon</h1>
+                <p>LKhung carbon mô đun cao tạo ra hiệu quả khí động học và độ cứng thông qua việc sử dụng các ống hình
+                    kammtail.</p>
+                <div class="actions">
+                    <button class="item" id="explore">Khám Phá</button>
+                    <button class="item" id="book"> Đặt Ngay</button>
+                </div>
+
+            </div>
+        </div>
+    </header>
+    <!-- <div class="menu_bar">
         <ul class="list_of_products">
             <li class="menu-title">Home</li>
             <li class="menu-title">Shop</li>
@@ -28,16 +80,25 @@
             <li class="menu-title">Blog</li>
             <li class="menu-title">Contact</li>
         </ul>
+        <div class="topnav">
+            <div class="search-container">
+                <form id="search_box">
+                    <input type="text" id="search_text" placeholder="Nhập nội dung cần tìm" required>
+                    <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+            </div>
+        </div>
     </div>
     <div class="owl-carousel owl-theme">
         <div class="item">
             <img alt=""
                 src="https://cdn.shopify.com/s/files/1/0577/9675/5633/files/leo_mtdanstore-slide-h1-1.png?v=1643293978">
         </div>
-    </div>
+    </div> -->
     <div class="trending_products">
-        <h4 class="title_block title-ap-group">YOU CAN FIND EVERY THING THAT YOU NEED FOR YOUR RIDE IN OUR SHOP</h4>
-        <div class="sub-title-widget sub-title-ap-group">PLEASE DISCOVER OUR MAIN PRODUCT CATEGORIES</div>
+        <h4 class="title_block title-ap-group">BẠN CÓ THỂ TÌM THẤY MỌI THỨ MÀ BẠN CẦN CHO CHUYẾN ĐI CỦA MÌNH TẠI CỬA
+            HÀNG CỦA CHÚNG TÔI</h4>
+        <div class="sub-title-widget sub-title-ap-group">HÃY KHÁM PHÁ CÁC DANH MỤC SẢN PHẨM CHÍNH CỦA CHÚNG TÔI</div>
         <div class="promotional_products">
             <div class="chill_content">
                 <div class="promotional_products_item">
@@ -126,12 +187,12 @@
             </div>
         </div>
     </div>
-    <!-- Product -->
+    <!-- Product
     <section class="product">
         this is our product
     </section>
 
-    <!-- BLOG -->
+
     <section class="newsletter">
         <p>Out Blog</p>
         <div>Blog 1</div>
@@ -139,7 +200,7 @@
         <div>Blog 3</div>
     </section>
 
-    <!-- FOOTER -->
+  
     <footer class="footer" id="footer">
         <div class="grid">
             <div class="grid_grow">
@@ -218,7 +279,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 <script>
     $('.owl-carousel').owlCarousel({
@@ -237,6 +298,14 @@
             }
         }
     })
+    function myFunction() {
+        var x = document.getElementById("menu");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
 </script>
 
 </html>
