--- a/Pages/Detail.html
+++ b/Pages/Detail.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Css-->
-    <link rel="stylesheet" href="./assets/css/Detail.css">
+    <link rel="stylesheet" href="../assets/css/Detail.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./assets/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="./assets/css/glider.min.css">
+    <link rel="stylesheet" href="../assets/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="../assets/css/glider.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!--=============== BOXICONS ===============-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!-- favicon icon -->
-    <link rel="shortcut icon" href="./assets/img/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon">
     <title>Details</title>
 </head>
 
@@ -23,15 +23,15 @@
     <header>
         <div class="top-header">
             <div class="logo">
-                <a href="/Home.html"><img
+                <a href="/index.html"><img
                         src="https://demo74leotheme.b-cdn.net/prestashop/leo_mtdanstore_demo/img/logo-1644293331.jpg"></a>
             </div>
             <div>
                 <ul class="topnav" id="menu">
-                    <li class="item"><a href="/Home.html" class="item">Homepage</a></li>
+                    <li class="item"><a href="/index.html" class="item">Homepage</a></li>
                     <li class="item">Products</li>
                     <li class="item">Services</li>
-                    <li class="item"><a href="/Login.html" class="item">Login</a></li>
+                    <li class="item"><a href="Login.html" class="item">Login</a></li>
                 </ul>
             </div>
             <div class="search-box">
@@ -46,29 +46,29 @@
     </header>
     <div class="banner-wrapper">
         <div class="banner-box">
-            <img src="/assets/img/Product/Banner3.jpg" alt="">
+            <img src="../assets/img/Product/Banner3.jpg" alt="">
         </div>
     </div>
     <!--Single product detail-->
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="/assets/img/Product/1.jpg" alt="" width="100%" id="ProductImg">
+                <img src="../assets/img/Product/1.jpg" alt="" width="100%" id="ProductImg">
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="/assets/img/Product/1.jpg" alt="" width="100%" class="small-img">
+                        <img src="../assets/img/Product/1.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/assets/img/Product/2.png" alt="" width="100%" class="small-img">
+                        <img src="../assets/img/Product/2.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/assets/img/Product/3.jpg" alt="" width="100%" class="small-img">
+                        <img src="../assets/img/Product/3.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/assets/img/Product/4.jpg" alt="" width="100%" class="small-img">
+                        <img src="../assets/img/Product/4.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/assets/img/Product/5.jpg" alt="" width="100%" class="small-img">
+                        <img src="../assets/img/Product/5.jpg" alt="" width="100%" class="small-img">
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     <div class="p-img-container">
                         <div class="p-img">
                             <a href="">
-                                <img src="/assets/img/Product/10.jpg" class="p-img-front" alt="Front">
+                                <img src="../assets/img/Product/10.jpg" class="p-img-front" alt="Front">
                             </a>
                         </div>
                     </div>
@@ -135,33 +135,7 @@
                     <div class="p-img-container">
                         <div class="p-img">
                             <a href="">
-                                <img src="/assets/img/Product/5.jpg" class="p-img-front" alt="Front">
-                            </a>
-                        </div>
-                    </div>
-                    <!--text-->
-                    <div class="p-box-text">
-                        <div class="product-category">
-                            <span>Mountain bike</span>
-                        </div>
-                        <a href="#" class="product-title">
-                            Awsome mountain from Germany
-                        </a>
-                        <div class="price-buy">
-                            <span class="p-price">32131$</span>
-                            <a href="#" class="buy-btn">Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="product-box">
-                    <!--discount-->
-                    <span class="p-discount">-20%</span>
-                    <!--img container-->
-                    <div class="p-img-container">
-                        <div class="p-img">
-                            <a href="">
-                                <img src="/assets/img/Product/8.jpg" class="p-img-front" alt="Front">
+                                <img src="../assets/img/Product/5.jpg" class="p-img-front" alt="Front">
                             </a>
                         </div>
                     </div>
@@ -187,7 +161,33 @@
                     <div class="p-img-container">
                         <div class="p-img">
                             <a href="">
-                                <img src="/assets/img/Product/7.jpg" class="p-img-front" alt="Front">
+                                <img src="../assets/img/Product/8.jpg" class="p-img-front" alt="Front">
+                            </a>
+                        </div>
+                    </div>
+                    <!--text-->
+                    <div class="p-box-text">
+                        <div class="product-category">
+                            <span>Mountain bike</span>
+                        </div>
+                        <a href="#" class="product-title">
+                            Awsome mountain from Germany
+                        </a>
+                        <div class="price-buy">
+                            <span class="p-price">32131$</span>
+                            <a href="#" class="buy-btn">Details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-box">
+                    <!--discount-->
+                    <span class="p-discount">-20%</span>
+                    <!--img container-->
+                    <div class="p-img-container">
+                        <div class="p-img">
+                            <a href="">
+                                <img src="../assets/img/Product/7.jpg" class="p-img-front" alt="Front">
                             </a>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                     <div class="p-img-container">
                         <div class="p-img">
                             <a href="">
-                                <img src="/assets/img/Product/6.jpg" class="p-img-front" alt="Front">
+                                <img src="../assets/img/Product/6.jpg" class="p-img-front" alt="Front">
                             </a>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                     <div class="p-img-container">
                         <div class="p-img">
                             <a href="">
-                                <img src="/assets/img/Product/5.jpg" class="p-img-front" alt="Front">
+                                <img src="../assets/img/Product/5.jpg" class="p-img-front" alt="Front">
                             </a>
                         </div>
                     </div>
@@ -305,8 +305,8 @@
     </footer>
 
 
-    <script src="/assets/js/details.js"></script>
-    <script src="/assets/js/glider.min.js"></script>
+    <script src="../assets/js/details.js"></script>
+    <script src="../assets/js/glider.min.js"></script>
     <script>
         new Glider(document.querySelector('.glider'), {
             slidesToScroll: 1,
