--- a/Pages/Detail.html
+++ b/Pages/Detail.html
@@ -23,15 +23,15 @@
     <header>
         <div class="top-header">
             <div class="logo">
-                <a href="/index.html"><img
+                <a href=" "><img
                         src="https://demo74leotheme.b-cdn.net/prestashop/leo_mtdanstore_demo/img/logo-1644293331.jpg"></a>
             </div>
             <div>
                 <ul class="topnav" id="menu">
-                    <li class="item"><a href="/index.html" class="item">Homepage</a></li>
+                    <li class="item"><a href=" " class="item">Homepage</a></li>
                     <li class="item">Products</li>
                     <li class="item">Services</li>
-                    <li class="item"><a href="Login.html" class="item">Login</a></li>
+                    <li class="item"><a href="Pages/Login.html" class="item">Login</a></li>
                 </ul>
             </div>
             <div class="search-box">
