--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     alt="">
             </div>
             <ul class="topnav" id="menu">
-                <li class="item"><a href="MindxFinalProject/" class="item">Homepage</a></li>
+                <li class="item"><a href=" " class="item">Homepage</a></li>
                 <li class="item">Products</li>
                 <li class="item">Services</li>
-                <li class="item"><a href="MindxFinalProject/Pages/Login.html" class="item">Login</a></li>>
+                <li class="item"><a href="Pages/Login.html" class="item">Login</a></li>>
                 <li class="icon" onclick="myFunction()">
                     <i class="fa-solid fa-bars"></i>
                 </li>
@@ -65,8 +65,8 @@
                 <h1>New product with 100% from carbon</h1>
                 <p>The high-modulus carbon frame creates aerodynamic efficiency and rigidity through the use of kammtail tubes.</p>
                 <div class="actions">
-                    <button class="item" id="explore"><a href="MindxFinalProject/Pages/Detail.html" style="color: #ffff;">Explore</a></button>
-                    <button class="item" id="book"><a href="MindxFinalProject/Pages/Detail.html" style="color: #ffff;">Oder now</a></button>
+                    <button class="item" id="explore"><a href="Pages/Detail.html" style="color: #ffff;">Explore</a></button>
+                    <button class="item" id="book"><a href="Pages/Detail.html" style="color: #ffff;">Oder now</a></button>
                 </div>
 
             </div>
@@ -90,7 +90,7 @@
                                     <span>We will answer all of your questions about the product and provide you
                                         the newest models with good deals.</span>
                                 </p>
-                                <a href="MindxFinalProject/Pages/Detail.html" class="btn-primery" data-mce-href="#">More
+                                <a href="Pages/Detail.html" class="btn-primery" data-mce-href="#">More
                                     info</a>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                     <span>Vel illum dolore eu feugiat nulla facilisis at vero eros et accu qui blandit
                                         praesent luptathum </span>
                                 </p>
-                                <a href="MindxFinalProject/Pages/Detail.html" class="btn-primery" data-mce-href="#">More
+                                <a href="Pages/Detail.html" class="btn-primery" data-mce-href="#">More
                                     info</a>
                             </div>
                         </div>
