--- a/Pages/Detail.html
+++ b/Pages/Detail.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <ul class="topnav" id="menu">
-                    <li class="item"><a href=" " class="item">Homepage</a></li>
+                    <li class="item"><a href="/index.html" class="item">Homepage</a></li>
                     <li class="item">Products</li>
                     <li class="item">Services</li>
                     <li class="item"><a href="Pages/Login.html" class="item">Login</a></li>
