--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -46,7 +46,7 @@
           </div>
           <div class="field btn">
             <div class="btn-layer"></div>
-            <input type="submit" value="Sign in" onclick="location.href=' ';" >
+            <input type="submit" value="Sign in" onclick="location.href='/index.html';" >
           </div>
           <div class="signup-link">
             Not have an account? <a href="">Sign up now!</a>
